# Master-Brain-API

./: .env  .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
benchmarks/: sample_benchmark.jsonl
browser-extension/master-brain-first/: README.md  background.js  content.js  manifest.json  options.html  options.js
config/: inheritance.toml  master_brain.toml  modules.toml  modules_smoke.toml
data/: brain_build_err.txt  quarantine.json
data/reports/: _tmp_render.toml  _tmp_render2.toml  alias_debug.txt  (+5 more)
notebooks/: master_brain_api_bootstrap.ipynb  master_brain_work_computer_bootstrap.ipynb
scripts/: bigquery_schema.sql  install-masterbrain-service.ps1  master_brain_preprocess.py  monitor-masterbrain-rebuild.ps1  regenerate_registry_once.py  run-masterbrain-api.ps1  sanitize_aliases_once.py  stop-masterbrain-service.ps1  uninstall-masterbrain-service.ps1
tests/: test_api_auth.py  test_api_path_resolution.py  test_api_public_mode.py  test_api_telemetry.py  test_benchmark.py  test_bq_telemetry.py  test_build_from_modules.py  test_chunking.py  test_confidence.py  test_extraction.py  test_humanities_context_retrieval.py  test_incremental_index.py  test_inheritance_expansion.py  test_interdisciplinary_routing.py  test_interdisciplinary_settings.py  test_master_brain_scaffold.py  test_module_registry.py  test_module_routing.py  test_orchestrator.py  test_phase2_instrumentation.py  test_prompt_templates.py  test_resilience_indexing.py  test_retrieval_theorem_aware.py  test_settings_bridge_key.py  test_symbolic.py  test_tensor_retrieval_and_routing.py
(+27 files in other folders)
